# gtdb2ncbi

./: Cargo.toml  README.org
data/: ncbi_vs_gtdb_archaea.xlsx  ncbi_vs_gtdb_bacteria.xlsx  ncbi_vs_gtdb_r207_archaea.xlsx  ncbi_vs_gtdb_r207_bacteria.xlsx  ncbi_vs_gtdb_r220_archaea.xlsx  ncbi_vs_gtdb_r220_bacteria.xlsx
src/: main.rs
tests/: oral_mgs_gtdb_classification.tsv  oral_mgs_gtdb_classification_add_ncbi.tsv
