[package]
name = "gtdb2ncbi"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16.1"
clap = "2.33.0"
csv = "1.1"

[[bin]]
name = "gtdb2ncbi"
path = "src/main.rs"
